# FriendlyOracleBots

./: .gitignore  LICENSE  README.md  Telegram_readme.md  pyproject.toml
Telegram/: run.py  run_local_serial.py
Telegram/cloud_run/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  run_gc.py  start.sh
Telegram/cloud_run/assets/: connection.yml  llm_settings.yml  telegram.yml
assets/: llm_settings.yml  telegram.yml
assets/images/: DutchieDutch_profile_pic
